--- a/.github/workflows/workflows.yaml
+++ b/.github/workflows/workflows.yaml
@@ -23,6 +23,7 @@ jobs:
           workload_identity_provider: projects/678357795040/locations/global/workloadIdentityPools/github-pool/providers/github-provider 
           access_token_lifetime: 900s
           project_id: intern-461913
+          service_account: pipeline@intern-461913.iam.gserviceaccount.com
 
       - id: gcp-sdk
         name: Set up Cloud SDK
@@ -31,4 +32,4 @@ jobs:
       - id: compute-list 
         name: GCP compute list 
         run: |
-          gcloud compute list
+          gcloud compute instances list
