--- a/values.yaml
+++ b/values.yaml
@@ -7,7 +7,7 @@ wordpressUsername: admin
 wordpressPassword: ""
 
 wordpressEmail: admin@ysys.hu
-wordpressFirstName: Hello
+wordpressFirstName: Aladar
 wordpressLastName: Szia
 wordpressBlogName: User's Blog!
 
