--- a/.github/workflows/workflows.yaml
+++ b/.github/workflows/workflows.yaml
@@ -29,7 +29,7 @@ jobs:
         name: Set up Cloud SDK
         uses: google-github-actions/setup-gcloud@v2
 
-       # 👇 Helm telepítése GCP-s runneren
+
       - id: install-helm
         name: Install Helm
         uses: azure/setup-helm@v3
@@ -50,3 +50,5 @@ jobs:
         
       - name: Run wp.sh script
         run: bash ./wp.sh
+
+        #valami
